--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.shaicha</groupId>
     <artifactId>shaicha-manager</artifactId>
     <version>1.6.9</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>shaicha-manager</name>
     <description>Demo project for Spring Boot</description>
@@ -229,7 +229,7 @@
 		</dependency>
 		
         <!--war包部署需要-->
-           <dependency>
+           <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
@@ -244,7 +244,7 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
-        </dependency> 
+        </dependency>  -->
     </dependencies>
     <build>
         <plugins>
