--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -28,7 +28,42 @@
     </properties>
 
     <dependencies>
-        <dependency>
+     <dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>poi-scratchpad</artifactId>
+  <version>3.14</version>
+</dependency>
+
+<dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>poi-ooxml</artifactId>
+  <version>3.14</version>
+</dependency>
+
+<dependency>
+  <groupId>fr.opensagres.xdocreport</groupId>
+  <artifactId>xdocreport</artifactId>
+  <version>1.0.6</version>
+</dependency>
+
+<dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>poi-ooxml-schemas</artifactId>
+  <version>3.14</version>
+</dependency>
+
+<dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>ooxml-schemas</artifactId>
+  <version>1.3</version>
+</dependency>
+
+<dependency>
+  <groupId>org.jsoup</groupId>
+  <artifactId>jsoup</artifactId>
+  <version>1.11.3</version>
+</dependency>
+<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
