--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -28,7 +28,7 @@
     </properties>
 
     <dependencies>
-     <dependency>
+    <!--  <dependency>
   <groupId>org.apache.poi</groupId>
   <artifactId>poi-scratchpad</artifactId>
   <version>3.14</version>
@@ -62,7 +62,7 @@
   <groupId>org.jsoup</groupId>
   <artifactId>jsoup</artifactId>
   <version>1.11.3</version>
-</dependency>
+</dependency> -->
 <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
