--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -288,6 +288,11 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency> -->
+          <dependency>
+          	<groupId>org.scala-lang</groupId>
+          	<artifactId>scala-library</artifactId>
+          	<version>2.11.0</version>
+          </dependency>
     </dependencies>
     <build>
         <plugins>
