--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.shaicha</groupId>
     <artifactId>shaicha-manager</artifactId>
     <version>1.6.9</version>
-    <packaging>war</packaging>	 
+    <packaging>jar</packaging>	 
 	 
     <name>shaicha-manager</name>
     <description>Demo project for Spring Boot</description>
@@ -272,7 +272,7 @@
 		</dependency>
 		
         <!--war包部署需要-->
-                <dependency>
+               <!--  <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
@@ -292,7 +292,7 @@
           	<groupId>org.scala-lang</groupId>
           	<artifactId>scala-library</artifactId>
           	<version>2.11.0</version>
-          </dependency> 
+          </dependency>  -->
     </dependencies>
     <build>
         <plugins>
