--- a/shaicha-manager/src/main/resources/application-dev.yml
+++ b/shaicha-manager/src/main/resources/application-dev.yml
@@ -9,9 +9,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver  
-    url: jdbc:mysql://rm-2zee8021e2232hhbcqo.mysql.rds.aliyuncs.com:3306/shaicha?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://119.3.238.84:3306/shaicha?useUnicode=true&characterEncoding=utf8
     username: root
-    password: Tmn521hjj
+    password: Dm202003
     initialSize: 1
     minIdle: 3
     maxActive: 20
