--- a/shaicha-portal/pom.xml
+++ b/shaicha-portal/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.shaicha</groupId>
     <artifactId>shaicha-portal</artifactId>
     <version>1.6.9</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>shaicha-portal</name>
     <description>Demo project for Spring Boot</description>
@@ -237,7 +237,7 @@
 
         <!--war包部署需要-->
             <!--&lt;!&ndash; 移除嵌入式tomcat插件 &ndash;&gt;-->
-                   <dependency>
+                  <!-- <dependency>
 	            <groupId>org.springframework.boot</groupId>
 	            <artifactId>spring-boot-starter-web</artifactId>
 	            <exclusions>
@@ -252,7 +252,7 @@
 	            <artifactId>javax.servlet-api</artifactId>
 	            <version>3.1.0</version>
 	            <scope>provided</scope>
-	        </dependency>
+	        </dependency>-->
     </dependencies>
     <build>
     	<finalName>ROOT</finalName>
