--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -28,15 +28,36 @@
     </properties>
 
     <dependencies>
-    <!--  <dependency>
+ <!--    
+	<dependency>  
+	    <groupId>org.apache.poi</groupId>  
+	    <artifactId>poi</artifactId>  
+	    <version>3.14</version>  
+	</dependency>  
+	
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi-ooxml</artifactId>
+	  <version>3.14</version>
+	</dependency>
+	
+		excel
+		<dependency>
+			<groupId>org.apache.log4j</groupId>
+			<artifactId>com.springsource.org.apache.log4j</artifactId>
+			<version>1.2.15</version>
+		</dependency>
+ 
+		jxl表格操作
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6.12</version>
+		</dependency>
+	 -->
+<!--  <dependency>
   <groupId>org.apache.poi</groupId>
   <artifactId>poi-scratchpad</artifactId>
-  <version>3.14</version>
-</dependency>
-
-<dependency>
-  <groupId>org.apache.poi</groupId>
-  <artifactId>poi-ooxml</artifactId>
   <version>3.14</version>
 </dependency>
 
@@ -63,7 +84,7 @@
   <artifactId>jsoup</artifactId>
   <version>1.11.3</version>
 </dependency> -->
-<dependency>
+		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
