--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.shaicha</groupId>
     <artifactId>shaicha-manager</artifactId>
     <version>1.6.9</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 	 
     <name>shaicha-manager</name>
     <description>Demo project for Spring Boot</description>
@@ -293,27 +293,27 @@
 		</dependency>
 		
         <!--war包部署需要-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-web</artifactId>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.springframework.boot</groupId>-->
-                    <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>javax.servlet</groupId>-->
-            <!--<artifactId>javax.servlet-api</artifactId>-->
-            <!--<version>3.1.0</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-         <!--  <dependency>
-          	<groupId>org.scala-lang</groupId>
-          	<artifactId>scala-library</artifactId>
-          	<version>2.11.0</version>
-          </dependency> -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+           <!--<dependency>-->
+          	<!--<groupId>org.scala-lang</groupId>-->
+          	<!--<artifactId>scala-library</artifactId>-->
+          	<!--<version>2.11.0</version>-->
+          <!--</dependency>-->
     </dependencies>
     <build>
         <plugins>
