--- a/shaicha-portal/pom.xml
+++ b/shaicha-portal/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.shaicha</groupId>
     <artifactId>shaicha-portal</artifactId>
     <version>1.6.9</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>shaicha-portal</name>
     <description>Demo project for Spring Boot</description>
@@ -238,22 +238,22 @@
         <!--war包部署需要-->
             <!--&lt;!&ndash; 移除嵌入式tomcat插件 &ndash;&gt;-->
 
-           <!--<dependency>-->
-	            <!--<groupId>org.springframework.boot</groupId>-->
-	            <!--<artifactId>spring-boot-starter-web</artifactId>-->
-	            <!--<exclusions>-->
-	                <!--<exclusion>-->
-	                    <!--<groupId>org.springframework.boot</groupId>-->
-	                    <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-	                <!--</exclusion>-->
-	            <!--</exclusions>-->
-	        <!--</dependency>-->
-	        <!--<dependency>-->
-	            <!--<groupId>javax.servlet</groupId>-->
-	            <!--<artifactId>javax.servlet-api</artifactId>-->
-	            <!--<version>3.1.0</version>-->
-	            <!--<scope>provided</scope>-->
-	        <!--</dependency>-->
+           <dependency>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-starter-web</artifactId>
+	            <exclusions>
+	                <exclusion>
+	                    <groupId>org.springframework.boot</groupId>
+	                    <artifactId>spring-boot-starter-tomcat</artifactId>
+	                </exclusion>
+	            </exclusions>
+	        </dependency>
+	        <dependency>
+	            <groupId>javax.servlet</groupId>
+	            <artifactId>javax.servlet-api</artifactId>
+	            <version>3.1.0</version>
+	            <scope>provided</scope>
+	        </dependency>
     </dependencies>
     <build>
     	<finalName>ROOT</finalName>
