--- a/shaicha-manager/pom.xml
+++ b/shaicha-manager/pom.xml
@@ -304,6 +304,12 @@
 		    <artifactId>core</artifactId>
 		    <version>3.3.0</version>
 		</dependency>
+        <!-- 条形码 -->
+        <dependency>
+            <groupId>net.sf.barcode4j</groupId>
+            <artifactId>barcode4j</artifactId>
+            <version>2.1</version>
+        </dependency>
 		
         <!--war包部署需要-->
         <!--<dependency>-->
